<resources>
    <string name="app_name">悠悠校园</string>
    <string name="network_error_tips">请检查您的网络连接</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="modify_success">修改成功</string>
    <string name="bottom_tab_one">主页</string>
    <string name="bottom_tab_two">商家</string>
    <string name="bottom_tab_three">个人</string>
    <string name="action_settings">Settings</string>
    <string name="warn">提示</string>
    <string name="seu">东南大学九龙湖校区</string>
    <string name="press_again_to_exit">再按一次退出~</string>
    <string name="delete">删除</string>
    <string name="request_time_out">请求超时，请检查网络连接~</string>
    <string name="start_yoyo_travel">开 启 Y O Y O 之 旅</string>
    <string name="get_userinfo_failed">获取用户信息失败~</string>
    <string name="yoyo_campus">悠 悠 校 园</string>
    <string name="about_line1">悠悠校园是由创梦工作室</string>
    <string name="about_line2">专为大学生而推出的一款生活服务一站式产品。</string>
    <string name="about_line3">悠悠校园完全贴近大学生生活，</string>
    <string name="about_line4">充分满足当代大学生</string>
    <string name="about_line5">闲置物品交易、旅游、学车、开设个人小店等需求。</string>
    <string name="about_line6">最全面的资讯</string>
    <string name="about_line7">最有力度的折扣</string>
    <string name="about_line8">最到位的服务</string>
    <string name="about_line9">尽在悠悠校园</string>
    <string name="copy_right">Copyright@2014-2015</string>
    <string name="company">南京虎腾信息科技有限公司</string>
    <string name="travel">旅游</string>
    <string name="study_abroad">留学</string>
    <string name="driver_school">驾校</string>
    <string name="class_uniform">班服</string>
    <string name="personal_shop">个人小店</string>
    <string name="popular_personal_shop">人气小店</string>
    <string name="items_other">其他</string>
    <string name="no_such_shop">没有相关商家</string>
    <string name="no_more">没有更多</string>
    <string name="electronics">数码电子</string>
    <string name="book_magazine">书籍杂志</string>
    <string name="transport">代步工具</string>
    <string name="daily_used">生活用品</string>
    <string name="travel_item_near">周边短线</string>
    <string name="travel_item_ancient_town">水乡古镇</string>
    <string name="travel_item_barbecue">露营烧烤</string>
    <string name="travel_item_carnie">游乐场</string>
    <string name="travel_item_long_distance">国内长线</string>
    <string name="travel_item_beach">海滨沙滩</string>
    <string name="language_item_TOEFL">托福</string>
    <string name="language_item_IETLS">雅思</string>
    <string name="language_item_GRE">GRE</string>
    <string name="language_item_minlang">小语种</string>
    <string name="language_item_foradvice">留学咨询</string>
    <string name="driver_school_item_normal">普通班</string>
    <string name="driver_school_item_vip">VIP班</string>
    <string name="uniforms_class">班服定制</string>
    <string name="uniforms_club">社团服装</string>
    <string name="uniforms_stage">舞台服装</string>
    <string name="uniforms_lease">服装租凭</string>
    <string name="shop_host">店铺主页</string>
    <string name="my_goods">我的商品</string>
    <string name="yoyo_custom_service">悠悠商家客服</string>
    <string name="add">添加</string>
    <string name="no_goods_at_present">暂时还没有商品,快去</string>
    <string name="no_goods_ba">吧</string>
    <string name="catalog_list">分类列表</string>
    <string name="preferential_list">优惠列表</string>
    <string name="on_sale">出售中</string>
    <string name="already_pull_off">已下架</string>
    <string name="new_preferential">新建优惠</string>
    <string name="edit_preferential">编辑优惠</string>
    <string name="new_catalog">新建分类</string>
    <string name="edit_catalog">编辑分类</string>
    <string name="finish_edit">完成编辑</string>
    <string name="pull_off">下 架</string>
    <string name="edit">编 辑</string>
    <string name="sale">上 架</string>
    <string name="good_add">商品添加</string>
    <string name="click_to_add_image">点击添加商品图片</string>
    <string name="good_name">商品名称</string>
    <string name="good_price">商品价格</string>
    <string name="good_preferential">商品优惠</string>
    <string name="good_catalog">商品分类</string>
    <string name="good_label">标签</string>
    <string name="good_detail">详情描述(请在这里输入不少于10个字)</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="add_new_preferential">新建商品优惠</string>
    <string name="add_new_catalog">新建商品分类</string>
    <string name="good_label1">商品标签</string>
    <string name="new_pre_cata_hint">输入文字</string>
    <string name="free_goods">闲置</string>
    <string name="ensure">确定</string>
    <string name="publish">发表</string>
    <string name="next_step">下一步</string>
    <string name="comment_hint">写评论...</string>
    <string name="back_idle_home">返回闲置主页</string>
    <string name="most_popular">人气最高</string>
    <string name="highest_appraise">评价最高</string>
    <string name="recent_publish">最新发布</string>
    <string name="cheapest">价格最低</string>
    <string name="up_photo">请为您的宝贝上传一张靓照吧！</string>
    <string name="up_photo_first">第一步：上传照片</string>
    <string name="write_detail_second">第二步：填写信息</string>
    <string name="goods_detail_bottom_info">商品详情</string>
    <string name="goods_detail_bottom_comment">商品评论</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">商品价格</string>
    <string name="goods_detail_describe">详情描述（请在这里输入不少于10个字）</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_success_hint">商品售出后请及时下架哦</string>
    <string name="look_goods_detail">查看商品详情</string>
    <string name="select_goods_photo">请选择商品照片</string>
    <string name="write_goods_detail">填写商品详情</string>
    <string name="goods_describe">信息描述</string>
    <string name="goods_classify">商品分类</string>
    <string name="interest">人感兴趣</string>
    <string name="like">人赞</string>
    <string name="RMB">￥</string>
    <string name="x_people_like">人感兴趣</string>
    <string name="yoyo_coupon_card_reduce">凭借悠悠万能优惠卡减免</string>
    <string name="yuan">元</string>
    <string name="x_people_bought">人已购买</string>
    <string name="useful">有用(</string>
    <string name="useful2">)</string>
    <string name="no_such_good">没有相关商品</string>
    <string name="collect_success">已收藏</string>
    <string name="collect_cancel">已取消收藏</string>
    <string name="order_view_number">view_number</string>
    <string name="order_price">price</string>
    <string name="order_last_update">last_update</string>
    <string name="order_score">score</string>
    <string name="good_is_not_active">商品已下架，或不存在</string>
    <string name="select_photo">选择图片</string>
    <string name="all_photos">所有图片</string>
    <string name="preview">预览</string>
    <string name="no_camera">设备没有相机~</string>
    <string name="plz_select_photo">请选择一张图片~</string>
    <string name="preview_photo">图片预览</string>
    <string name="finish">完成</string>
    <string name="select_from_gallery">从相册选择</string>
    <string name="take_a_photo">拍摄照片</string>
    <string name="collect">收藏</string>
    <string name="shop">店铺</string>
    <string name="consult">咨询</string>
    <string name="go_buy_it">去下单</string>
    <string name="detial">详情</string>
    <string name="comment">评论</string>
    <string name="comment1">评价</string>
    <string name="sale_range">经营范围</string>
    <string name="connect_address">联系地址</string>
    <string name="connect_phone">联系电话</string>
    <string name="shop_resume">店铺简介</string>
    <string name="report_shop">举 报 商 家</string>
    <string name="report_shop1">举报商家</string>
    <string name="report_shop_hint">我们会根据您的反馈及时处理，保证您的权益</string>
    <string name="report_success">举报成功</string>
    <string name="report_cant_less_than_10">举报内容不能小于10个字~</string>
    <string name="shop_with_no_good">该商家暂时没有商品</string>
    <string name="no_login">未登录</string>
    <string name="personal_center">个人中心</string>
    <string name="my_free_goods">我的闲置</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_orders">我的订单</string>
    <string name="apply_shop">申请开店</string>
    <string name="my_coupon_card">我的万能优惠卡</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="check_update">检查更新</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">退 出 登 录</string>
    <string name="feedback_hint">请输入您遇到的问题或是对我们的意见或建议</string>
    <string name="commit">提 交</string>
    <string name="goods">商品</string>
    <string name="seller">商家</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="bundling_phone">绑定手机</string>
    <string name="school">学校</string>
    <string name="in_school_year">入学年份</string>
    <string name="bundling">绑定</string>
    <string name="personal_info">个人信息</string>
    <string name="select_in_school_year">选择入学年份</string>
    <string name="own">已拥有</string>
    <string name="not_have">未拥有</string>
    <string name="yoyo_coupon">悠悠万能优惠卡</string>
    <string name="use_direction">使用说明 :</string>
    <string name="share">分享</string>
    <string name="change_nickname">修改昵称</string>
    <string name="nickname_in_change">昵称修改中</string>
    <string name="modifing">修改中</string>
    <string name="choose_enroll_year">选择校区</string>
    <string name="uploading_image">图片上传中</string>
    <string name="get_loaction_error">没有获取到校区信息，是否重新获取?</string>
    <string name="delete_success">删除成功~</string>
    <string name="in_delete">删除中</string>
    <string name="pull_off_success">下架成功~</string>
    <string name="on_sale_success">上架成功~</string>
    <string name="in_pull_off">下架中</string>
    <string name="in_on_sale">上架中</string>
    <string name="thx_your_feedback">感谢您的意见反馈，我们会更加努力~</string>
    <string name="feed_back_cant_less_than_10">反馈不能少于10字~</string>
    <string name="image_upload_failed">图片上传失败</string>
    <string name="not_get_idle_category">没有获取到闲置分类，是否重新获取？</string>
    <string name="idle_edit">编辑</string>
    <string name="newest_version">已是最新版本~</string>
    <string name="checking_update">检查更新中</string>
    <string name="login_register">登录/注册</string>
    <string name="good_name_valid">商品名称应在1~10个字之间</string>
    <string name="good_price_to_large">商品价格过高</string>
    <string name="good_description_valid">详情应在10~150个字之间</string>
    <string name="good_category_cant_be_null">商品分类不能为空</string>
    <string name="login_username_hint">请输入您的手机号</string>
    <string name="login_pwd_hint">请输入您的密码</string>
    <string name="login_button">登录</string>
    <string name="text_forget_pwd">忘记密码</string>
    <string name="text_register_im">马上注册</string>
    <string name="text_login_fast">快速登录</string>
    <string name="text_weichat_login">微信登录</string>
    <string name="text_weibo_login">微博登录</string>
    <string name="text_verify_code">请输入验证码</string>
    <string name="text_pwd_confirm">请再次输入密码</string>
    <string name="register_button">注册</string>
    <string name="text_get_code">获取验证码</string>
    <string name="bound_button">完成</string>
    <string name="register_input_user_name_hint">请填写昵称</string>
    <string name="register_input_school">请选择你的学校</string>
    <string name="register_input_entertime">2015</string>
    <string name="register_succeed">返回登录界面</string>
    <string name="login">登录</string>
    <string name="in_login">正在登录</string>
    <string name="begin_enpower">开始授权</string>
    <string name="number">数量</string>
    <string name="use_coupon_card">使用万能优惠卡</string>
    <string name="total">合计</string>
    <string name="campus_in">所在校区</string>
    <string name="remark">备注</string>
    <string name="remark_hint">填写您的要求，让商家提供更好的服务</string>
    <string name="get">获取</string>
    <string name="submit_order">提 交 订 单</string>
    <string name="order_confirm">订单确认</string>
    <string name="pay">付款</string>
    <string name="password">密码</string>
    <string name="pay_code">付款码 :</string>
    <string name="order_id">订单编号 :</string>
    <string name="paid_time">下单时间 :</string>
</resources>