<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/publishing_success_icon_pictures" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/publish_success"
            android:textColor="#06c2ad"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/publish_success_hint"
            android:textColor="#666666"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <Button
            android:id="@+id/free_goods_publish_look_detail_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round"
            android:text="@string/look_goods_detail"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/free_goods_publish_back_home_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_round"
            android:text="@string/back_idle_home"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>