<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/select_photo"
        android:textSize="22sp"
        android:textColor="@color/app_theme_color2"
        android:paddingLeft="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:background="@color/app_theme_color2"
        android:layout_width="match_parent"
        android:layout_height="4dp"/>
    <TextView
        android:id="@+id/select_photo_tv"
        android:text="@string/select_from_gallery"
        android:textSize="16sp"
        android:textColor="@color/near_black"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/button_background_selectable"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <View
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="4px"/>
    <TextView
        android:id="@+id/take_photo_tv"
        android:text="@string/take_a_photo"
        android:textSize="16sp"
        android:textColor="@color/near_black"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/button_background_selectable"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</LinearLayout>