<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/add_new_catalog"
        style="@style/add_good_new_cata_pre_title_text_style"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_catalog_et"
        android:text="@string/new_pre_cata_hint"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:background="@color/new_pre_cata_edittext_bottom_color"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/new_catalog_cancel_ll"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/cancel"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                style="@style/shop_management_dialog_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:background="@color/divider_color"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/new_catalog_confirm_ll"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/confirm"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                style="@style/shop_management_dialog_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>