<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/feedback"
            android:textSize="16sp"
            android:textColor="@color/black_40"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/feedback_et"
            android:hint="@string/feedback_hint"
            android:textSize="14sp"
            android:background="@drawable/feedback_edittext_bg"
            android:gravity="start"
            android:paddingTop="12dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="23dp"
            android:layout_marginRight="38dp"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </LinearLayout>
    <View
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="2px"/>
    <Button
        android:id="@+id/feedback_commit_btn"
        android:text="@string/commit"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button_round"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="44dp" />
</LinearLayout>