<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/up_photo_first"
        android:textSize="14sp"
        android:textColor="#222222" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <ImageView
                android:id="@+id/free_goods_publish_first_up_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/add_product_btn_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/up_photo"
                android:textSize="14sp"
                android:textColor="#666666" />

            <Button
                android:id="@+id/free_goods_publish_first_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="48dp"
                android:textSize="18sp"
                android:background="@drawable/button_round"
                android:text="@string/next_step"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>