<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wdd="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar"></include>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_bg"
        android:orientation="horizontal">

        <com.dreamspace.uucampus.ui.base.ChangeColorTabWithText
            android:id="@+id/id_tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="5dp"
            wdd:drawable="@drawable/home"
            wdd:maincolor="@color/detail_background"
            wdd:text="@string/bottom_tab_one"
            wdd:textsize="12sp" />

        <com.dreamspace.uucampus.ui.base.ChangeColorTabWithText
            android:id="@+id/id_tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="5dp"
            wdd:drawable="@drawable/market"
            wdd:maincolor="@color/detail_background"
            wdd:text="@string/bottom_tab_two"
            wdd:textsize="12sp" />

        <com.dreamspace.uucampus.ui.base.ChangeColorTabWithText
            android:id="@+id/id_tab3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="5dp"
            wdd:drawable="@drawable/person"
            wdd:maincolor="@color/detail_background"
            wdd:text="@string/bottom_tab_three"
            wdd:textsize="12sp" />

    </LinearLayout>

</LinearLayout>